--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>smzdm</title>
+    <title>爱回收官网 | 手机回收｜二手手机回收｜笔记本回收｜专业二手数码回收平台</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but smzdm doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but aihuishou doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
